# task_manager

./: .gitignore  Cargo.toml  LICENSE  README.md  sqlQuery.txt
src/: .env  db.rs  main.rs  models.rs  routes.rs
